<resources>
    <string name="app_name">Five Google \"Easter Eggs\"</string>
    <!--Words to tell the users before using this app-->
    <string name="foreword">
        All of the \"easter eggs\" below are all tested by the author(during 2016/9/6~2016/9/8) and all of which work, no need to worry!

        \n\nSince the keywords might not work if changed to another language, I only provide English ones.You can also try them in your mother language=)

        \n\nHave fun!
    </string>
    <!-- Words in the buttons, no need to change -->
    <string name="atari_breakout">
        <xliff>Atari Breakout</xliff>
    </string>
    <string name="do_a_barrel_roll">
        <xliff>Do A Barrel Roll</xliff>
    </string>
    <string name="recursion">
        <xliff>Recursion</xliff>
    </string>
    <string name="tic_tac_toe">
        <xliff>Tic Tac Toe</xliff>
    </string>
    <!-- Exception: flip,Smartphones only needs translation -->
    <string name="flip_chrome">
        Flip! <xliff>Chrome!</xliff>(Smartphones only)
    </string>
    <!-- step go to google -->
    <string name="step_go_to_google">
        <xliff>1.</xliff>Go to <xliff>Google</xliff>
    </string>
    <!-- strings below will follow with 2 numbers(eg.step_1_1) -->
    <!-- the first number means which button(eg.1 = atari breakout button)-->
    <!-- the second number means step in that button -->
    <string name="step_1_1">
        <xliff>1.</xliff>Go to <xliff>Google</xliff> and click on \"Images\"
    </string>
    <string name="step_1_2">
        <xliff>2.</xliff>Type in <xliff>\"atari breakout\"</xliff>
    </string>
    <string name="step_1_3">
        <xliff>3.</xliff>Enjoy the classic game!
    </string>
    <string name="step_2_2">
        <xliff>2.</xliff>Type in <xliff>\"do a barrel roll\"</xliff>
    </string>
    <string name="step_2_3">
        <xliff>3.</xliff>Watch <xliff>Google</xliff> search page rotate!
    </string>
    <string name="step_3_2">
        <xliff>2.</xliff>Type in <xliff>\"recursion\"</xliff>
    </string>
    <string name="step_3_3">
        <xliff>3.</xliff>You will see the following result
    </string>
    <string name="step_3_4">
        <xliff>4.</xliff>Click on <xliff>\"recursion\"</xliff>, and see what happens?
    </string>
    <string name="step_4_2">
        <xliff>2.</xliff>Type in <xliff>\"tic tac toe\"</xliff>
    </string>
    <string name="step_4_3">
        <xliff>3.</xliff>You will see the game board like this
    </string>
    <string name="step_4_4">
        <xliff>4.</xliff>Choose difficulty, <xliff>O/X</xliff> and play!
    </string>
    <string name="step_5_note">
        Note:This trick can only be applied on web browser <xliff>\"Chrome\"</xliff>
    </string>
    <string name="step_5_1">
        <xliff>1.</xliff>Open up your <xliff>\"Chrome\"</xliff>
    </string>
    <string name="step_5_2_1">
        <xliff>2.</xliff>Click the square (with number in it) at the top-right of the screen
    </string>
    <string name="step_5_2_2">
        Then your screen should be something like this
    </string>
    <string name="step_5_3">
        <xliff>3.</xliff>Slide your screen upward <xliff>5</xliff> times and see what happens!
    </string>
</resources>
