<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        tools:context=".FlipChrome">

        <TextView
            style="@style/paragraph"
            android:text="@string/step_5_note" />

        <TextView
            style="@style/paragraph"
            android:text="@string/step_5_1" />

        <TextView
            style="@style/paragraph"
            android:text="@string/step_5_2_1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:src="@drawable/smart_phone_1" />

        <TextView
            style="@style/paragraph"
            android:text="@string/step_5_2_2" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:src="@drawable/smart_phone_2" />

        <TextView
            style="@style/paragraph"
            android:text="@string/step_5_3" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:src="@drawable/flip_chrome_1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/flip_chrome_2"/>
    </LinearLayout>
</ScrollView>