<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        tools:context="com.example.anthony.fivethingsproject.Recursion">

        <TextView
            style="@style/paragraph"
            android:text="@string/step_go_to_google" />

        <TextView
            style="@style/paragraph"
            android:text="@string/step_3_2" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:src="@drawable/type_recursion" />

        <TextView
            style="@style/paragraph"
            android:text="@string/step_3_3" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"

            android:src="@drawable/did_you_mean_recursion" />

        <TextView
            style="@style/paragraph"
            android:text="@string/step_3_4" />
    </LinearLayout>
</ScrollView>